--- a/BuilderUtils/BuilderUtils.csproj
+++ b/BuilderUtils/BuilderUtils.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ITGlobal.CLI" Version="1.0.23" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
