--- a/BuilderUtils/BuilderUtils.csproj
+++ b/BuilderUtils/BuilderUtils.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="ITGlobal.CLI" Version="1.0.23" />
+    <PackageReference Include="Lime.Messaging" Version="0.8.57" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
